--- a/html_advanced/2-index.html
+++ b/html_advanced/2-index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-	<title>Homepage - Technium</title>
+	<title>Homepage - Techium</title>
   <meta name="description" content="Techium is a digital agency">
   <link rel="icon" type="image/x-icon" href="./favicon.ico"  >
   <link rel="icon" type="image/png" href="./apple-touch-icon.png" >
