--- a/html_advanced/20-index.html
+++ b/html_advanced/20-index.html
@@ -17,14 +17,13 @@
           <span>Techium</span>
         </a>
       </div>
-    <nav>
-      <a href="/">Home<a>
-          <a href=#services>Services<a>
-          <a href=#works>Works<a>
-          <a href=#about>About<a>
-          <a href=#latest_news>Latest news<a>
-          <a href=#testimonials>Testimonials<a>
-          <a href=#contact>Contact<a>
+    <nav href="/">
+      <a href=#services>Services<a>
+      <a href=#works>Works<a>
+      <a href=#about>About<a>
+      <a href=#latest_news>Latest news<a>
+      <a href=#testimonials>Testimonials<a>
+      <a href=#contact>Contact<a>
     </nav>
     </div>
   </header>
