--- a/html_advanced/22-index.html
+++ b/html_advanced/22-index.html
@@ -142,7 +142,7 @@
       <div>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Id Sextilius factum negabat. Quo tandem modo? At eum nihili facit; Quae contraria sunt his, malane?</p>
       </div>
-      <a href="./contact.html">Get in touch</a>
+      <a href="contact.html">Get in touch</a>
       </div>
     </section>
   </main>
