--- a/html_advanced/32-styleguide.html
+++ b/html_advanced/32-styleguide.html
@@ -80,7 +80,7 @@
         <!-- Typography -->
         <section>
           <header>
-            <h2>Typography<h2>
+            <h2>Typography</h2>
           </header>
           <div>
             320 Stewart Avenue, Unit 12<br>
