--- a/html_advanced/32-styleguide.html
+++ b/html_advanced/32-styleguide.html
@@ -83,8 +83,7 @@
             <h2>Typography</h2>
           </header>
           <div>
-            320 Stewart Avenue, Unit 12<br>
-            New York City NY 10001
+            <address>320 Stewart Avenue, Unit 12<br>New York City NY 10001</address>
           </div>
           <div>
               <pre><code>
