--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -103,11 +103,13 @@
           </header>
           <table>
             <caption>Star Wars Trilogy Data</caption>
+			<thead>
             <tr>
               <th scope="col">Title</th>
               <th scope="col">Director</th>
               <th scope="col">Release Date</th>
             </tr>
+			</thead>
             <tr>
               <th scope="row">Star Wars: Episode IV - A New Hope</th>
               <td>George Lucas</td>
