--- a/html_advanced/33-styleguide.html
+++ b/html_advanced/33-styleguide.html
@@ -110,6 +110,7 @@
               <th scope="col">Release Date</th>
             </tr>
 			</thead>
+			<tbody>
             <tr>
               <th scope="row">Star Wars: Episode IV - A New Hope</th>
               <td>George Lucas</td>
@@ -125,6 +126,7 @@
               <td>Richard Marquand</td>
               <td>May 25th, 1983</td>
             </tr>
+			</tbody>
           </table>
         </section>
       </header>
